Integration with RMiner